# clipsmith

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  RELEASE.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: bundle-reviewer.md
.claude/commands/: capture.md  health.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: gitleaks.yml  project-health.yml
docs/: DEVELOP.md  alcove-integration.md  capture-bundle-contract.md  inbox-integration.md  index.html  okf-export.md  provider-quality-gate.md  skill-distribution.md  web-capture-ai-eval.md
docs/ai-evals/: okf-export-valid-xhs-bundle.md
script/: check-health.sh  eval-harness.mjs
skills/clipsmith-capture/: SKILL.md  quality-gate.json
skills/clipsmith-capture/agents/: openai.yaml
skills/clipsmith-ocr/: README.md  SKILL.md  pyproject.toml  quality-gate.json  skill.yaml
skills/clipsmith-ocr/agents/: openai.yaml
skills/clipsmith-ocr/references/: architecture.md
skills/clipsmith-ocr/scripts/: ocr-image-macos.py  run.ts
skills/clipsmith-web/: SKILL.md  package-lock.json  package.json  quality-gate.json  skill.yaml
skills/clipsmith-web/agents/: openai.yaml
skills/clipsmith-web/evals/: web-capture-evals.json
skills/clipsmith-web/evals/ai-evals/: kingson-agent-runtime-skill-ai.md
skills/clipsmith-web/evals/fixtures/kingson-agent-runtime-skill-ai/: capture.json  post.md  summary.md
skills/clipsmith-web/evals/fixtures/kingson-agent-runtime-skill-ai/raw/: metadata.json  rendered.txt  source.html
skills/clipsmith-web/prompts/: evaluate-article.md  extract-article.md
skills/clipsmith-web/scripts/: eval.mjs  run.ts
skills/clipsmith-web/tests/: test_regression.sh
skills/clipsmith-wechat/: SKILL.md  package-lock.json  package.json  quality-gate.json  skill.yaml
skills/clipsmith-wechat/agents/: openai.yaml
skills/clipsmith-wechat/evals/: wechat-capture-evals.json
skills/clipsmith-wechat/evals/ai-evals/: wechat-wang-yangming-heart-study.md
skills/clipsmith-wechat/evals/fixtures/wechat-wang-yangming-heart-study/: article.md  article.mhtml  post.md
skills/clipsmith-wechat/prompts/: evaluate-capture.md  normalize-article.md
skills/clipsmith-wechat/references/: plan.md
skills/clipsmith-wechat/scripts/: core.ts  eval.mjs  executor.ts  run.ts
skills/clipsmith-wechat/tests/: test_regression.sh
skills/clipsmith-x/: README.md  README.zh-CN.md  SKILL.md  package-lock.json  package.json  pnpm-lock.yaml  quality-gate.json  skill.yaml  tsconfig.json
skills/clipsmith-x/agents/: openai.yaml
skills/clipsmith-x/evals/: x-capture-evals.json
skills/clipsmith-x/evals/ai-evals/: x-kingson-skill-runtime-text.md
skills/clipsmith-x/evals/fixtures/x-kingson-skill-runtime-text/: post.md
skills/clipsmith-x/evals/live-ai-evals/: x-droidbuilds-single-image.md  x-geekcatx-chatgpt-codex-article.md
skills/clipsmith-x/prompts/: evaluate-capture.md
skills/clipsmith-x/references/: architecture.md  plan.md
skills/clipsmith-x/scripts/: core.ts  download.mts  eval.mjs  executor.ts  explore.mts  run.ts
skills/clipsmith-x/tests/: test_regression.sh
skills/clipsmith-xhs/: README.md  README.zh-CN.md  SKILL.md  package-lock.json  package.json  quality-gate.json  skill.yaml
skills/clipsmith-xhs/agents/: openai.yaml
skills/clipsmith-xhs/evals/: xhs-capture-evals.json
skills/clipsmith-xhs/evals/ai-evals/: xhs-skill-long-term-asset.md
skills/clipsmith-xhs/evals/fixtures/xhs-skill-long-term-asset/: ocr.md  post.md
skills/clipsmith-xhs/prompts/: evaluate-capture.md
skills/clipsmith-xhs/references/: architecture.md  plan.md
skills/clipsmith-xhs/scripts/: core.ts  eval.mjs  executor.ts  ocr.ts  run.ts
skills/clipsmith-xhs/tests/: ocr.test.ts  test_regression.sh
src/clipsmith/: __main__.py  bundle.py  capture.py  cli.py  errors.py  installation.py  materialization.py  normalization.py  okf.py  providers.py  quality_gate.py  sinks.py
tests/: test_bundle.py  test_capture.py  test_cli.py  test_installation.py  test_materialization.py  test_normalization.py  test_okf.py  test_providers.py  test_quality_gate.py  test_sinks.py
tests/fixtures/invalid-missing-summary/: capture.json
tests/fixtures/valid-xhs-bundle/: capture.json  post.md  summary.md
