[project]
name = "clipsmith"
version = "0.1.0"
description = "CLI + agent-skill toolkit for capturing posts, articles, media, and OCR into portable local bundles."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/OctopusGarage/clipsmith"
Repository = "https://github.com/OctopusGarage/clipsmith"
Issues = "https://github.com/OctopusGarage/clipsmith/issues"
Documentation = "https://github.com/OctopusGarage/clipsmith#readme"

[project.scripts]
clipsmith = "clipsmith.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
